--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-hook-form": "^7.43.1",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.6"
   },
