--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "@vkontakte/icons": "^2.15.0",
     "@vkontakte/vk-bridge": "^2.7.2",
     "@vkontakte/vkui": "^5.1.0",
-    "axios": "^1.1.2",
     "cypress": "^11.1.0",
     "date-fns": "^2.29.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.43.1",
     "react-redux": "^8.0.5",
