--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 VITE_API_DOMAIN=vkfiles.usetech.com
 VITE_API_BASE_URL=https://vkfiles.usetech.com
 VITE_APP_ID=51548357
-VITE_APP_DEV_AUTH='Bearer {"sign":"0T3kUVXIScPbCfXw2LU3VN4aYhUd_qMZdyOieZHmPDc","userId":8789950,"appId":51548357, "ts":1, "role":"ORGANIZER"}'
-
+VITE_APP_DEV_AUTH='Bearer {"sign":"0T3kUVXIScPbCfXw2LU3VN4aYhUd_qMZdyOieZHmPDc","userId":8789950,"appId":51548357, "ts":1, "role":'
