--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "dependencies": {
     "@happysanta/router": "^0.3.1",
     "@reduxjs/toolkit": "^1.9.2",
+    "@types/lodash.get": "^4.4.7",
     "@vkontakte/icons": "^2.15.0",
     "@vkontakte/vk-bridge": "^2.7.2",
     "@vkontakte/vkui": "^5.1.0",
     "copy-to-clipboard": "^3.3.3",
     "cypress": "^11.1.0",
     "date-fns": "^2.29.3",
+    "lodash.get": "^4.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
