--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "copy-to-clipboard": "^3.3.3",
     "cypress": "^11.1.0",
     "date-fns": "^2.29.3",
+    "lodash": "^4.17.21",
     "lodash.get": "^4.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
