--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "task-uploader-mini-app",
-  "version": "0.6.0",
+  "version": "1.0.1",
   "author": "k.pozdnikin, s.minenkov, a.medvedev",
   "description": "",
   "homepage": ".",
@@ -12,6 +12,7 @@
     "stylelint": "stylelint src/**/*.{ts,tsx} --fix",
     "dev": "vite",
     "build": "vite build",
+    "build:odr": "vite build --config vite.odr.config.ts",
     "serve": "serve -s dist",
     "tunnel": "vk-tunnel --insecure=1 --http-protocol=https --ws-protocol=wss --host=0.0.0.0 --port=10888",
     "build:serve:tunnel": "yarn build && concurrently \"yarn serve -p 10888\" \"yarn tunnel\"",
@@ -23,13 +24,15 @@
     "@happysanta/router": "^0.3.1",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/lodash.get": "^4.4.7",
-    "@vkontakte/icons": "^2.15.0",
+    "@types/lodash.uniq": "^4.5.7",
+    "@vkontakte/icons": "^2.27.0",
     "@vkontakte/vk-bridge": "^2.7.2",
-    "@vkontakte/vkui": "^5.1.0",
+    "@vkontakte/vkui": "^5.3.1",
     "copy-to-clipboard": "^3.3.3",
     "cypress": "^11.1.0",
     "date-fns": "^2.29.3",
     "lodash.get": "^4.4.2",
+    "lodash.uniq": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
@@ -81,7 +84,7 @@
     "typescript": "^4.9.1-beta",
     "vite": "^4.1.1",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-singlefile": "^0.13.2",
+    "vite-plugin-singlefile": "^0.13.5",
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.28.4"
   }
