--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "postcss-jsx": "^0.36.4",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.7.1",
-    "serve": "14.0.1",
+    "serve": "^14.2.0",
     "stylelint": "^14.14.0",
     "stylelint-config-css-modules": "4.1.0",
     "stylelint-config-prettier": "9.0.3",
