ME-42247: MVP delete subtask

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_DOMAIN=vk-task-uploader-mini-app-core.staging.kapps.vk-apps.ru
-VITE_API_BASE_URL=https://vk-task-uploader-mini-app-core.staging.kapps.vk-apps.ru
+VITE_API_DOMAIN=vkfiles.usetech.com
+VITE_API_BASE_URL=https://vkfiles.usetech.com
 VITE_APP_ID=51548357
 VITE_APP_DEV_AUTH='Bearer {"sign":"6QRV_pyyu89KK3rWB5aIMm_jU_xiUJmEXHp81N26qtI","userId":3911458,"appId":51548357, "ts":1, "role":'
