ME-42015 Typescript/eslint fixes

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,10 @@
 {
     "parser": "@typescript-eslint/parser",
-
-    "plugins": ["prettier", "@typescript-eslint", "import"],
-
+    "plugins": [
+        "prettier",
+        "@typescript-eslint",
+        "import"
+    ],
     "extends": [
         "airbnb",
         "airbnb-typescript",
@@ -11,30 +13,66 @@
         "plugin:@typescript-eslint/recommended-requiring-type-checking",
         "prettier"
     ],
-
     "rules": {
         "class-methods-use-this": "off",
-        "prettier/prettier": ["error"],
+        "prettier/prettier": [
+            "error"
+        ],
         "react/react-in-jsx-scope": "off",
         "@typescript-eslint/consistent-type-imports": "warn",
         "no-console": "warn",
         "no-debugger": "warn",
         "no-void": "off",
-        "padding-line-between-statements":["warn",
-        {"blankLine": "always", "prev": "*", "next": "if" },
-        {"blankLine": "always", "prev": "*", "next": "return" }],
+        "padding-line-between-statements": [
+            "warn",
+            {
+                "blankLine": "always",
+                "prev": "*",
+                "next": "if"
+            },
+            {
+                "blankLine": "always",
+                "prev": "*",
+                "next": "return"
+            }
+        ],
         "react/prop-types": "off",
         "no-plusplus": "off",
-        "react/jsx-newline": ["error", { "prevent": false }],
+        "react/jsx-newline": [
+            "error",
+            {
+                "prevent": false
+            }
+        ],
         "@typescript-eslint/indent": "off",
-        "indent": ["error", 4, { "SwitchCase": 1 }],
-        "react/jsx-indent": ["error", 4],
-        "react/jsx-indent-props": ["error", 4],
-        "jsx-quotes": ["error", "prefer-single"],
+        "indent": [
+            "error",
+            4,
+            {
+                "SwitchCase": 1
+            }
+        ],
+        "react/jsx-indent": [
+            "error",
+            4
+        ],
+        "react/jsx-indent-props": [
+            "error",
+            4
+        ],
+        "jsx-quotes": [
+            "error",
+            "prefer-single"
+        ],
         "object-curly-newline": "off",
         "@typescript-eslint/no-floating-promises": "off",
         "import/prefer-default-export": "off",
-        "no-param-reassign": [2, { "props": false }],
+        "no-param-reassign": [
+            2,
+            {
+                "props": false
+            }
+        ],
         "import/no-cycle": "off",
         "@typescript-eslint/no-use-before-define": "off",
         "react/require-default-props": "off",
@@ -44,7 +82,6 @@
                 "allowSingleExtends": true
             }
         ],
-
         "react/jsx-sort-props": [
             "error",
             {
@@ -63,7 +100,10 @@
                     "builtin",
                     "external",
                     "internal",
-                    ["parent", "sibling"],
+                    [
+                        "parent",
+                        "sibling"
+                    ],
                     "index",
                     "unknown"
                 ],
@@ -74,25 +114,29 @@
                         "position": "after"
                     }
                 ],
-                "pathGroupsExcludedImportTypes": ["@app/"],
+                "pathGroupsExcludedImportTypes": [
+                    "@app/"
+                ],
                 "newlines-between": "always"
             }
         ]
     },
-
     "parserOptions": {
         "project": "./tsconfig.json"
     },
     "settings": {
         "import/resolver": {
             "node": {
-                "paths": ["src"]
+                "paths": [
+                    "src"
+                ]
             },
             "typescript": {
                 "project": "./tsconfig.json"
             }
         }
     },
-
-    "ignorePatterns": ["dist/**/*.js"]
+    "ignorePatterns": [
+        "dist/**/*.js"
+    ]
 }
