--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build:serve:tunnel": "yarn build && concurrently \"yarn serve -p 10888\" \"yarn tunnel\"",
     "dev:tunnel": "concurrently \"yarn dev --config vite.tunnel.config.ts\" \"yarn tunnel --port=10888\"",
     "deploy": "vk-miniapps-deploy",
-    "preview": "vite preview --port 8080"
+    "preview": "vite preview --port 8080",
+    "eslint": "eslint --format=table --fix ."
   },
   "dependencies": {
     "@happysanta/router": "^0.3.1",
