--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,18 +15,35 @@
         "incremental": true,
         "allowJs": true,
         "noFallthroughCasesInSwitch": true,
-
         "baseUrl": "./",
         "paths": {
-            "@/*": ["src/*"]
+            "@/*": [
+                "src/*"
+            ]
         },
         "outDir": "./dist",
-
-        "lib": ["dom", "dom.iterable", "esnext"],
-        "typeRoots": ["node_modules/@types", "src/types"]
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
+        "typeRoots": [
+            "node_modules/@types",
+            "src/types"
+        ]
     },
-    "include": ["src", "vite.config.ts", "vite.tunnel.config.ts", "postcss.config.js", "cypress"],
-    "exclude": ["node_modules"],
+    "include": [
+        "src",
+        "vite.config.ts",
+        "vite.tunnel.config.ts",
+        "postcss.config.js",
+        "vite.odr.config.ts",
+        "cypress.config.ts"
+    ],
+    "exclude": [
+        "cypress",
+        "node_modules"
+    ],
     "references": [
         {
             "path": "./tsconfig.node.json"
